Contest data added